test/assets/hello-microshift-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-microshift
  labels:
    app: hello-microshift
spec:
  selector:
    app: hello-microshift
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
