test/assets/isolated-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isolated-lb-service
spec:
  ports:
  - port: 31111
    targetPort: 80
  selector:
    ingresscontroller.operator.openshift.io/deployment-ingresscontroller: default
  type: LoadBalancer
