test/assets/topolvm-to-lvms-diff.yaml
# This is a raw set of resources that was previously present in a Microshift Installation with TopoLVM,
# and now needs to be removed
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: topolvm-controller
  namespace: openshift-storage
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: topolvm-node
  namespace: openshift-storage
---
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: topolvm-node-scc
---
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: topolvm-node
---
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: topolvm-controller
---
kind: RoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: topolvm-controller
  namespace: openshift-storage
---
kind: ClusterRole
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: topolvm-controller
---
kind: ClusterRole
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: topolvm-node-scc
---
kind: ClusterRole
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: topolvm-node
---
kind: Role
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: topolvm-controller
  namespace: openshift-storage
---
kind: ServiceAccount
apiVersion: v1
metadata:
  name: topolvm-controller
  namespace: openshift-storage
---
kind: ServiceAccount
apiVersion: v1
metadata:
  name: topolvm-node
  namespace: openshift-storage
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: lvmd
  namespace: openshift-storage
---
kind: SecurityContextConstraints
apiVersion: security.openshift.io/v1
metadata:
  name: topolvm-node
